--- a/scripts/historic.ipynb
+++ b/scripts/historic.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "boxed-evanescence",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext lab_black"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "emerging-stocks",
+   "id": "choice-black",
    "metadata": {},
    "source": [
     "# Historic Events\n",
@@ -13,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "purple-climb",
+   "execution_count": 2,
+   "id": "optimum-joyce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precise-winner",
+   "id": "integrated-sweden",
    "metadata": {},
    "source": [
     "We start by loading the data. We'll slice off the most Southern tip of Texas, which doesn't get as cold, and the Western sliver (much love to my friends in El Paso, but you're not in ERCOT)"
@@ -39,22 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "meaningful-anderson",
+   "execution_count": 3,
+   "id": "headed-stationery",
    "metadata": {},
    "outputs": [],
    "source": [
     "hdd = (\n",
-    "    xr.open_mfdataset(\"../data/processed/era5/hdd_*.nc\").\n",
-    "    sel(latitude=slice(37, 27), longitude=slice(-106, -92)).\n",
-    "    compute()\n",
+    "    xr.open_mfdataset(\"../data/processed/era5/hdd_*.nc\")\n",
+    "    .sel(latitude=slice(37, 27), longitude=slice(-106, -92))\n",
+    "    .compute()\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "nasty-doctrine",
+   "execution_count": 4,
+   "id": "latest-layout",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,22 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "outer-employment",
+   "execution_count": 5,
+   "id": "large-gateway",
    "metadata": {},
    "outputs": [],
    "source": [
     "hdd_roll = xr.concat(\n",
     "    [\n",
-    "        hdd[\"HDD\"].rolling(time=dur).mean().assign_coords({\"lag\": dur}) for dur in DURATIONS\n",
+    "        hdd[\"HDD\"].rolling(time=dur).mean().assign_coords({\"lag\": dur})\n",
+    "        for dur in DURATIONS\n",
     "    ],\n",
     "    dim=\"lag\",\n",
-    ").rename({\"longitude\": \"lon\", \"latitude\": \"lat\"}) # rename to work w/ regionmask"
+    ").rename(\n",
+    "    {\"longitude\": \"lon\", \"latitude\": \"lat\"}\n",
+    ")  # rename to work w/ regionmask"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "grateful-spain",
+   "id": "settled-endorsement",
    "metadata": {},
    "source": [
     "Based on **subjective** exploratory analysis, reading newspapers and blogs, and looking at this data, we choose 4 events to plot"
@@ -86,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "sealed-battle",
+   "execution_count": 6,
+   "id": "light-adventure",
    "metadata": {},
    "outputs": [],
    "source": [
     "EVENTS = [\n",
-    "    [\"1951-02-01\", \"1951-02-01\", \"1951-02-02\"], # 1 day, 3 day, 5 day\n",
+    "    [\"1951-02-01\", \"1951-02-01\", \"1951-02-02\"],  # 1 day, 3 day, 5 day\n",
     "    [\"1983-12-25\", \"1983-12-25\", \"1983-12-26\"],\n",
     "    [\"1989-12-23\", \"1989-12-24\", \"1989-12-24\"],\n",
     "    [\"2011-02-02\", \"2011-02-04\", \"2011-02-05\"],\n",
@@ -102,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "particular-petroleum",
+   "id": "twenty-thirty",
    "metadata": {},
    "source": [
     "**NOTE**: not all data for 2021 is available yet!"
@@ -110,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beautiful-criminal",
+   "id": "matched-perry",
    "metadata": {},
    "source": [
     "We'll plot heating demand days centered on Texas, but we'll include nearby regions"
@@ -118,19 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "static-plain",
+   "execution_count": 7,
+   "id": "dietary-malawi",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_proj = ccrs.PlateCarree()\n",
     "map_proj = ccrs.LambertConformal()\n",
-    "plot_kw = {\"levels\": np.linspace(33, 68, 15), \"cmap\": \"plasma\", \"add_colorbar\": False, \"transform\": data_proj}"
+    "plot_kw = {\n",
+    "    \"levels\": np.linspace(33, 68, 15),\n",
+    "    \"cmap\": \"plasma\",\n",
+    "    \"add_colorbar\": False,\n",
+    "    \"transform\": data_proj,\n",
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "victorian-feeding",
+   "id": "billion-birthday",
    "metadata": {},
    "source": [
     "We apply a filter to show only data over land"
@@ -138,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fourth-nickname",
+   "execution_count": 8,
+   "id": "institutional-pharmacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "institutional-protest",
+   "execution_count": 9,
+   "id": "advisory-official",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +188,14 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(nrows=len(DURATIONS), ncols=len(EVENTS), figsize=(14, 7), subplot_kw=dict(projection=map_proj), sharex=True, sharey=True)\n",
+    "fig, axes = plt.subplots(\n",
+    "    nrows=len(DURATIONS),\n",
+    "    ncols=len(EVENTS),\n",
+    "    figsize=(14, 7),\n",
+    "    subplot_kw=dict(projection=map_proj),\n",
+    "    sharex=True,\n",
+    "    sharey=True,\n",
+    ")\n",
     "\n",
     "for col, event in enumerate(EVENTS):\n",
     "    for row, dur in enumerate(DURATIONS):\n",
@@ -186,7 +211,7 @@
     "fig.tight_layout()\n",
     "fig.subplots_adjust(right=0.875)\n",
     "cax = fig.add_axes([0.9, 0.15, 0.015, 0.7])\n",
-    "cbar = fig.colorbar(C0, cax = cax)\n",
+    "cbar = fig.colorbar(C0, cax=cax)\n",
     "cbar.set_label(\"Heating Demand [deg F / day]\", rotation=270)\n",
     "cbar.ax.get_yaxis().labelpad = 20\n",
     "\n",
@@ -196,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cloudy-captain",
+   "id": "surrounded-superior",
    "metadata": {},
    "source": [
     "One cool insight is that the 2011 storm was much less severe (over most of Texas) than some others we have witnessed in the historical record.\n",
