--- a/scripts/local_return_period.ipynb
+++ b/scripts/local_return_period.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "moderate-force",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext lab_black"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "monetary-process",
+   "id": "exclusive-carrier",
    "metadata": {},
    "source": [
     "# Local Return Periods\n",
@@ -28,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "respective-jacob",
+   "execution_count": 2,
+   "id": "shared-specialist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moved-export",
+   "id": "involved-shade",
    "metadata": {},
    "source": [
     "## GHCND\n",
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continued-history",
+   "id": "governing-rental",
    "metadata": {},
    "source": [
     "First, load the data set in which we computed the empirical exceedance probability for annual-maximum cold outbreaks of different lengths.\n",
@@ -71,17 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "occupational-monitoring",
+   "execution_count": 3,
+   "id": "professional-switzerland",
    "metadata": {},
    "outputs": [],
    "source": [
-    "return_period = 1 / pd.read_csv(os.path.join(PARDIR, \"data\", \"processed\", \"ghcnd_exceedances.csv\"), index_col=0)"
+    "return_period = 1 / pd.read_csv(\n",
+    "    os.path.join(PARDIR, \"data\", \"processed\", \"ghcnd_exceedances.csv\"), index_col=0\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "frank-hardwood",
+   "id": "catholic-facial",
    "metadata": {},
    "source": [
     "Now we join this with station information"
@@ -89,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "specific-shoot",
+   "execution_count": 4,
+   "id": "independent-wheel",
    "metadata": {},
    "outputs": [
     {
@@ -194,20 +206,22 @@
        "USC00411128  -102.2681   BROWNFIELD #2  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metadata = read_station_metadata(os.path.join(PARDIR, \"data\", \"raw\", \"ghcnd_stations.txt\"))\n",
+    "metadata = read_station_metadata(\n",
+    "    os.path.join(PARDIR, \"data\", \"raw\", \"ghcnd_stations.txt\")\n",
+    ")\n",
     "mrg = return_period.join(metadata[[\"LATITUDE\", \"LONGITUDE\", \"NAME\"]], how=\"left\")\n",
     "mrg.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "legal-monaco",
+   "id": "intellectual-sewing",
    "metadata": {},
    "source": [
     "Here are all the stations we are using:"
@@ -215,8 +229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "downtown-chain",
+   "execution_count": 5,
+   "id": "automotive-chemical",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +255,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "motivated-orientation",
+   "id": "steady-yeast",
    "metadata": {},
    "source": [
     "Now we can plot the data"
@@ -260,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "divine-opposition",
+   "execution_count": 6,
+   "id": "selective-afternoon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,8 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "acknowledged-soccer",
+   "execution_count": 7,
+   "id": "encouraging-fraud",
    "metadata": {},
    "outputs": [
     {
@@ -290,11 +304,13 @@
     }
    ],
    "source": [
-    "VMAX = 250 # color bar limit\n",
+    "VMAX = 250  # color bar limit\n",
     "VMIN = 10\n",
     "TICKS = [VMIN, 25, 50, 100, VMAX]\n",
     "\n",
-    "fig, axes = plt.subplots(nrows=2, ncols=2, subplot_kw={\"projection\": map_proj}, figsize=(10, 8))\n",
+    "fig, axes = plt.subplots(\n",
+    "    nrows=2, ncols=2, subplot_kw={\"projection\": map_proj}, figsize=(10, 8)\n",
+    ")\n",
     "for ax, dur in zip(axes.flat, durations_plot):\n",
     "    # scatter plot\n",
     "    sc = ax.scatter(\n",
@@ -306,7 +322,9 @@
     "        cmap=\"YlOrBr_r\",\n",
     "        s=45,\n",
     "    )\n",
-    "    outliers = mrg.loc[mrg[f\"temp_{dur}_days\"] > 100] # highlight any stations outside the boundaries\n",
+    "    outliers = mrg.loc[\n",
+    "        mrg[f\"temp_{dur}_days\"] > 100\n",
+    "    ]  # highlight any stations outside the boundaries\n",
     "    ax.scatter(\n",
     "        outliers[\"LONGITUDE\"],\n",
     "        outliers[\"LATITUDE\"],\n",
@@ -323,7 +341,7 @@
     "fig.tight_layout()\n",
     "fig.subplots_adjust(right=0.9)\n",
     "cax = fig.add_axes([0.9, 0.15, 0.015, 0.7])\n",
-    "cbar = fig.colorbar(sc, cax = cax, label=\"Return Period [Years]\")\n",
+    "cbar = fig.colorbar(sc, cax=cax, label=\"Return Period [Years]\")\n",
     "cbar.set_ticks(TICKS)\n",
     "cbar.ax.set_yticklabels(TICKS)\n",
     "plt.savefig(figname(\"local_rt_ghcnd.pdf\"))\n",
@@ -332,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latest-chaos",
+   "id": "imperial-ratio",
    "metadata": {},
    "source": [
     "Note that here a circle means it was a >=100 year return period event."
@@ -340,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-domestic",
+   "id": "bearing-citizen",
    "metadata": {},
    "source": [
     "Because I live in Houston and I'm curious, what was the return period at Hobby?"
@@ -348,8 +366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "secondary-missouri",
+   "execution_count": 8,
+   "id": "limited-syndicate",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +423,7 @@
        "USW00012918   -95.2819  HOUSTON HOBBY AP  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "figured-tutorial",
+   "id": "hollow-wedding",
    "metadata": {},
    "source": [
     "About a 1 in 25 year storm at Hobby!\n",
@@ -425,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chronic-conservation",
+   "id": "intelligent-stomach",
    "metadata": {},
    "source": [
     "## ERA5\n",
@@ -435,21 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "norwegian-harvest",
+   "execution_count": 9,
+   "id": "animal-spring",
    "metadata": {},
    "outputs": [],
    "source": [
     "era5_rt = (\n",
-    "    xr.open_dataarray(\"../data/processed/era5/exceedance.nc\").\n",
-    "    sel(latitude=slice(37, 27), longitude=slice(-106, -92)).\n",
-    "    rename({\"longitude\": \"lon\", \"latitude\": \"lat\"}) # rename to work w/ regionmask\n",
+    "    xr.open_dataarray(\"../data/processed/era5/exceedance.nc\")\n",
+    "    .sel(latitude=slice(37, 27), longitude=slice(-106, -92))\n",
+    "    .rename({\"longitude\": \"lon\", \"latitude\": \"lat\"})  # rename to work w/ regionmask\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "organic-ordinary",
+   "id": "international-layout",
    "metadata": {},
    "source": [
     "We want to plot only over land"
@@ -457,8 +475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "colored-assist",
+   "execution_count": 10,
+   "id": "discrete-russell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adverse-logging",
+   "id": "bottom-toyota",
    "metadata": {},
    "source": [
     "These estimates have already been calculated"
@@ -479,8 +497,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "imposed-white",
+   "execution_count": 11,
+   "id": "broadband-collar",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +515,9 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(nrows=2, ncols=2, subplot_kw={\"projection\": map_proj}, figsize=(8, 8))\n",
+    "fig, axes = plt.subplots(\n",
+    "    nrows=2, ncols=2, subplot_kw={\"projection\": map_proj}, figsize=(8, 8)\n",
+    ")\n",
     "\n",
     "for ax, dur in zip(axes.flat, era5_rt[\"lag\"].values):\n",
     "    rt_land.sel(lag=dur).plot(\n",
@@ -515,7 +535,7 @@
     "fig.tight_layout()\n",
     "fig.subplots_adjust(right=0.875)\n",
     "cax = fig.add_axes([0.9, 0.15, 0.015, 0.7])\n",
-    "cbar = fig.colorbar(sc, cax = cax, label=\"Heating Degree Days: Return Period [Years]\")\n",
+    "cbar = fig.colorbar(sc, cax=cax, label=\"Heating Degree Days: Return Period [Years]\")\n",
     "cbar.set_ticks(TICKS)\n",
     "cbar.ax.set_yticklabels(TICKS)\n",
     "plt.savefig(figname(\"local_rt_era5.pdf\"))\n",
@@ -524,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beautiful-robin",
+   "id": "eastern-setup",
    "metadata": {},
    "source": [
     "We can see that our findings are generally consistent across these two very different datasets, which adds credibility."
