Quasi-final version

--- a/scripts/hdd_idf.ipynb
+++ b/scripts/hdd_idf.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "moral-organizer",
+   "id": "constitutional-overall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closed-breakdown",
+   "id": "talented-nursery",
    "metadata": {},
    "source": [
     "# ERCOT HDD\n",
@@ -23,10 +23,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "confirmed-fiction",
+   "id": "single-triple",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from labellines import labelLines\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -36,22 +38,25 @@
     "import xarray as xr\n",
     "\n",
     "from codebase.calc import optimizer\n",
+    "from codebase.data import PARDIR\n",
     "from codebase.fig import figname"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "practical-portfolio",
+   "id": "subsequent-elimination",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdd = xr.open_dataset(\"../data/processed/era5/tx/hdd_ercot.nc\")"
+    "hdd = xr.open_dataset(\n",
+    "    os.path.join(PARDIR, \"data\", \"processed\", \"era5\", \"tx\", \"hdd_ercot.nc\")\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "musical-chancellor",
+   "id": "patient-gentleman",
    "metadata": {},
    "source": [
     "In this data, the\n",
@@ -64,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organizational-smith",
+   "id": "jewish-valuation",
    "metadata": {},
    "source": [
     "## IDF Curves\n",
@@ -77,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "authorized-breath",
+   "id": "dried-portsmouth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swiss-ecology",
+   "id": "annoying-spice",
    "metadata": {},
    "source": [
     "Next we will construct annual maximum time series"
@@ -126,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "aggregate-morocco",
+   "id": "abandoned-bridal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "interstate-infrared",
+   "execution_count": 6,
+   "id": "starting-authentication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "motivated-luxembourg",
+   "execution_count": 7,
+   "id": "sitting-centre",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "covered-navigator",
+   "execution_count": 8,
+   "id": "weird-static",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alone-handle",
+   "id": "natural-alignment",
    "metadata": {},
    "source": [
     "Done!"
