--- a/scripts/local_return_period.ipynb
+++ b/scripts/local_return_period.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "viral-fruit",
+   "id": "piano-daniel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coupled-thanks",
+   "id": "determined-somerset",
    "metadata": {},
    "source": [
     "# Local Return Periods\n",
@@ -39,10 +39,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "metropolitan-mustang",
+   "id": "progressive-montreal",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import cartopy.crs as ccrs\n",
     "from cartopy.feature import STATES, COASTLINE, ShapelyFeature\n",
     "import cartopy.io.shapereader as shpreader\n",
@@ -55,14 +57,14 @@
     "import xarray as xr\n",
     "\n",
     "from codebase.calc import return_period as calc_return_period\n",
-    "from codebase.data import get_ghcn_data\n",
+    "from codebase.data import get_ghcn_data, PARDIR\n",
     "from codebase.read_ghcn import read_station_metadata\n",
     "from codebase.fig import figname"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "brilliant-bacon",
+   "id": "suburban-crown",
    "metadata": {},
    "source": [
     "## GHCND\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-kingston",
+   "id": "suitable-batch",
    "metadata": {},
    "source": [
     "First, load the data set in which we computed the empirical exceedance probability for annual-maximum cold outbreaks of different lengths.\n",
@@ -82,18 +84,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "varied-accessory",
+   "id": "square-variable",
    "metadata": {},
    "outputs": [],
    "source": [
     "return_period = 1 / pd.read_csv(\n",
-    "    \"../data/processed/ghcnd/return_periods.csv\", index_col=0\n",
+    "    os.path.join(PARDIR, \"data\", \"processed\", \"ghcnd\", \"return_periods.csv\"),\n",
+    "    index_col=0,\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "expensive-vinyl",
+   "id": "excess-company",
    "metadata": {},
    "source": [
     "Now we join this with station information"
@@ -102,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "egyptian-manor",
+   "id": "economic-glenn",
    "metadata": {},
    "outputs": [
     {
@@ -212,14 +215,16 @@
     }
    ],
    "source": [
-    "metadata = read_station_metadata(\"../data/raw/ghcnd_stations.txt\")\n",
+    "metadata = read_station_metadata(\n",
+    "    os.path.join(PARDIR, \"data\", \"raw\", \"ghcnd_stations.txt\")\n",
+    ")\n",
     "mrg = return_period.join(metadata[[\"LATITUDE\", \"LONGITUDE\", \"NAME\"]], how=\"left\")\n",
     "mrg.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-remedy",
+   "id": "continued-canal",
    "metadata": {},
    "source": [
     "Here are all the stations we are using:"
@@ -228,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "electric-cooperative",
+   "id": "amended-enclosure",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respiratory-tourist",
+   "id": "alien-adventure",
    "metadata": {},
    "source": [
     "Now we can plot the data"
@@ -271,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "favorite-nelson",
+   "id": "judicial-warrior",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "juvenile-basin",
+   "id": "prerequisite-copper",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "detailed-tourist",
+   "id": "sustainable-cruise",
    "metadata": {},
    "source": [
     "Note that here a circle means it was a >=100 year return period event.\n",
@@ -356,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "middle-alfred",
+   "id": "optional-arrangement",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handmade-emphasis",
+   "id": "heard-elder",
    "metadata": {},
    "source": [
     "About a 1 in 25 year storm at Hobby!\n",
@@ -432,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caring-connectivity",
+   "id": "vocational-principle",
    "metadata": {},
    "source": [
     "## ERA5\n",
@@ -443,18 +448,20 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "democratic-trouble",
+   "id": "charitable-glass",
    "metadata": {},
    "outputs": [],
    "source": [
-    "era5_rt = xr.open_dataarray(\"../data/processed/era5/tx_return_period.nc\").rename(\n",
+    "era5_rt = xr.open_dataarray(\n",
+    "    os.path.join(PARDIR, \"data\", \"processed\", \"era5\", \"tx_return_period.nc\")\n",
+    ").rename(\n",
     "    {\"longitude\": \"lon\", \"latitude\": \"lat\"}\n",
     ")  # rename to work w/ regionmask"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "acknowledged-forwarding",
+   "id": "global-terry",
    "metadata": {},
    "source": [
     "We want to plot only over land"
@@ -463,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "analyzed-lancaster",
+   "id": "fossil-delhi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fleet-dressing",
+   "id": "early-isolation",
    "metadata": {},
    "source": [
     "These estimates have already been calculated so we can just plot them.\n",
@@ -485,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "integral-montana",
+   "id": "complimentary-healthcare",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +756,7 @@
    ],
    "source": [
     "generators = pd.read_excel(\n",
-    "    \"../data/raw/eia/november_generator2020.xlsx\",\n",
+    "    os.path.join(PARDIR, \"data\", \"raw\", \"eia\", \"november_generator2020.xlsx\"),\n",
     "    skiprows=2,\n",
     "    sheet_name=\"Operating\",\n",
     "    index_col=\"Entity ID\",\n",
@@ -759,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separate-florida",
+   "id": "ecological-setting",
    "metadata": {},
    "source": [
     "Some recoding necessary"
@@ -768,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "straight-enhancement",
+   "id": "aging-sheriff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seventh-guitar",
+   "id": "looking-million",
    "metadata": {},
    "source": [
     "Now also population data"
@@ -827,12 +834,20 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "embedded-wheel",
+   "id": "dynamic-blocking",
    "metadata": {},
    "outputs": [],
    "source": [
     "pop = (\n",
-    "    xr.open_dataarray(\"../data/raw/gpwv4/gpw_v4_population_density_rev11_2pt5_min.nc\")\n",
+    "    xr.open_dataarray(\n",
+    "        os.path.join(\n",
+    "            PARDIR,\n",
+    "            \"data\",\n",
+    "            \"raw\",\n",
+    "            \"gpwv4\",\n",
+    "            \"gpw_v4_population_density_rev11_2pt5_min.nc\",\n",
+    "        )\n",
+    "    )\n",
     "    .sel(raster=5)\n",
     "    .rename({\"longitude\": \"lon\", \"latitude\": \"lat\"})\n",
     ")"
@@ -841,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "owned-lingerie",
+   "id": "another-equation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painted-julian",
+   "id": "rural-emergency",
    "metadata": {},
    "source": [
     "And finally ERCOT's outline"
@@ -862,12 +877,14 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "satisfied-painting",
+   "id": "grave-monitoring",
    "metadata": {},
    "outputs": [],
    "source": [
     "grid_feature = ShapelyFeature(\n",
-    "    shpreader.Reader(\"../data/raw/interconnects/TexasInterconnect.shp\").geometries(),\n",
+    "    shpreader.Reader(\n",
+    "        os.path.join(PARDIR, \"data\", \"raw\", \"interconnects\", \"TexasInterconnect.shp\")\n",
+    "    ).geometries(),\n",
     "    ccrs.PlateCarree(),\n",
     "    edgecolor=\"black\",\n",
     "    facecolor=\"gray\",\n",
@@ -879,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "comparative-edward",
+   "id": "informational-sleeve",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-stream",
+   "id": "federal-wheel",
    "metadata": {},
    "source": [
     "We can see that our findings are generally consistent across these two very different datasets, which adds credibility."
